Issue #5: UI fixes: created dialog popup theming (via `DialogPopupPaper` component as `PaperComponent` argument to `Dialog`), fixed theme button styles (normal font weight, fixed a bug with vertical text alignment; TODO: Check buttons' height relative to input elements), changed dark background color to `#1a1b1e`, used in svelte randonneur app, added titles to main menu items, fixed app title style, footer styles.

--- a/src/components/App/AppHeader/AppHeader.module.scss
+++ b/src/components/App/AppHeader/AppHeader.module.scss
@@ -21,3 +21,7 @@
     min-width: 36px;
   }
 }
+
+.appTitle {
+  font-weight: normal;
+}
